--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 *{
     box-sizing: border-box;
-
+    font-family:Arial;
 }
 body{
     padding: 0;
@@ -66,6 +66,7 @@ body{
 
 .address-bar{
     width: 5rem;
+    text-align: center;
 }
 .formula-bar{
     width: calc(100vw - 5rem - 20px - 3rem);
@@ -123,7 +124,6 @@ body{
     position: sticky;
     top: 2rem;
     left: 0;
-    z-index: 1;
 }
 
 .address-row-cont{
@@ -163,4 +163,24 @@ body{
 
 .row-cont{
     display: flex;
+}
+
+.color-prop{
+    position: relative;
+}
+
+.color-prop > input{
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+}
+
+.bgcolor-prop{
+    position: relative;
+}
+.cellbgcolor-prop{
+    display: none;
 }
